<resources>
    <string name="app_name">WanAndroid</string>
    <string name="error_tips">不妙！加载失败了ヽ(≧Д≦)ノ\n 告诉大佬一些可能的原因：\n1.不可直视的网络环境\n 2.服务器大哥的不定期抽风\n 3.WanAndroid眼冒金星拒绝服务喔~</string>
    <string name="error_reload">重试</string>
    <string name="no_login">未登录</string>
    <string name="home">首页</string>
    <string name="know">知识体系</string>
    <string name="nav">导航</string>
    <string name="project">项目</string>
    <string name="collect">收藏</string>
    <string name="set">设置</string>

    <string name="account_pws_not_null">用户名和密码不能为空！</string>
    <string name="login_error">登录失败！</string>
    <string name="login_success">登录成功！</string>
    <string name="account_pws_size_error">用户名和密码长度不能低于6位！</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
