<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_nav_home"
            android:title="@string/home"
            android:icon="@mipmap/ic_launcher"/>
        <item
            android:id="@+id/menu_nav_know"
            android:title="@string/know"
            android:icon="@mipmap/ic_launcher"/>
        <item
            android:id="@+id/menu_nav_nav"
            android:title="@string/nav"
            android:icon="@mipmap/ic_launcher"/>
        <item
            android:id="@+id/menu_nav_project"
            android:title="@string/project"
            android:icon="@mipmap/ic_launcher"/>
    </group>
    <item android:title="@string/app_name">
        <menu>
            <item android:id="@+id/menu_nav_collect"
                android:title="@string/collect"
                android:icon="@mipmap/ic_launcher"/>
            <item android:id="@+id/menu_nav_set"
                android:title="@string/set"
                android:icon="@mipmap/ic_launcher"/>
        </menu>
    </item>
</menu>